syntax = "proto2";
package bnet.protocol.authentication;

// Proto extractor compiled unit - https://github.com/HearthSim/proto-extractor

import "bnet/account_types.proto";
import "bnet/rpc.proto";
import "bnet/global_extensions/method_options.proto";
import "bnet/content_handle.proto";
import "bnet/entity.proto";


message ModuleLoadRequest {
	required .bnet.protocol.ContentHandle module_handle = 1;
	optional bytes message = 2;
}

message ModuleNotification {
	optional int32 module_id = 2;
	optional uint32 result = 3;
}

message ModuleMessageRequest {
	required int32 module_id = 1;
	optional bytes message = 2;
}

message LogonRequest {
	optional string program = 1;
	optional string platform = 2;
	optional string locale = 3;
	optional string email = 4;
	optional string version = 5;
	optional int32 application_version = 6;
	optional bool public_computer = 7;
	optional bytes sso_id = 8;
	optional bool disconnect_on_cookie_fail = 9 [default = false];
	optional bool allow_logon_queue_notifications = 10 [default = false];
	optional bool web_client_verification = 11 [default = false];
	optional bytes cached_web_credentials = 12;
}

message LogonResult {
	required uint32 error_code = 1;
	optional .bnet.protocol.EntityId account = 2;
	repeated .bnet.protocol.EntityId game_account = 3;
	optional string email = 4;
	repeated uint32 available_region = 5;
	optional uint32 connected_region = 6;
	optional string battle_tag = 7;
	optional string geoip_country = 8;
}

message GenerateSSOTokenRequest {
	optional fixed32 program = 1;
}

message GenerateSSOTokenResponse {
	optional bytes sso_id = 1;
	optional bytes sso_secret = 2;
}

message LogonUpdateRequest {
	required uint32 error_code = 1;
}

message LogonQueueUpdateRequest {
	required uint32 position = 1;
	required uint64 estimated_time = 2;
	required uint64 eta_deviation_in_sec = 3;
}

message AccountSettingsNotification {
	repeated .bnet.protocol.account.AccountLicense licenses = 1;
	optional bool is_using_rid = 2;
	optional bool is_playing_from_igr = 3;
	optional bool can_receive_voice = 4;
	optional bool can_send_voice = 5;
}

message ServerStateChangeRequest {
	required uint32 state = 1;
	required uint64 event_time = 2;
}

message VersionInfo {
	optional uint32 number = 1;
	optional string patch = 2;
	optional bool is_optional = 3;
	optional uint64 kick_time = 4;
}

message VersionInfoNotification {
	optional .bnet.protocol.authentication.VersionInfo version_info = 1;
}

message MemModuleLoadRequest {
	required .bnet.protocol.ContentHandle handle = 1;
	required bytes key = 2;
	required bytes input = 3;
}

message MemModuleLoadResponse {
	required bytes data = 1;
}

message SelectGameAccountRequest {
	required .bnet.protocol.EntityId game_account = 1;
}

message GameAccountSelectedRequest {
	required uint32 result = 1;
	optional .bnet.protocol.EntityId game_account = 2;
}

message VerifyWebCredentialsRequest {
	optional bytes web_credentials = 1;
}

service AuthenticationClient {
	rpc ModuleLoad (.bnet.protocol.authentication.ModuleLoadRequest) returns (.bnet.protocol.NO_RESPONSE);
	rpc ModuleMessage (.bnet.protocol.authentication.ModuleMessageRequest) returns (.bnet.protocol.NoData);
	rpc AccountSettings (.bnet.protocol.authentication.AccountSettingsNotification) returns (.bnet.protocol.NO_RESPONSE);
	rpc ServerStateChange (.bnet.protocol.authentication.ServerStateChangeRequest) returns (.bnet.protocol.NO_RESPONSE);
	rpc LogonComplete (.bnet.protocol.authentication.LogonResult) returns (.bnet.protocol.NO_RESPONSE);
	rpc MemModuleLoad (.bnet.protocol.authentication.MemModuleLoadRequest) returns (.bnet.protocol.authentication.MemModuleLoadResponse);
	rpc LogonUpdate (.bnet.protocol.authentication.LogonUpdateRequest) returns (.bnet.protocol.NO_RESPONSE);
	rpc VersionInfoUpdated (.bnet.protocol.authentication.VersionInfoNotification) returns (.bnet.protocol.NO_RESPONSE);
	rpc LogonQueueUpdate (.bnet.protocol.authentication.LogonQueueUpdateRequest) returns (.bnet.protocol.NO_RESPONSE);
	rpc LogonQueueEnd (.bnet.protocol.NoData) returns (.bnet.protocol.NO_RESPONSE);
	rpc GameAccountSelected (.bnet.protocol.authentication.GameAccountSelectedRequest) returns (.bnet.protocol.NO_RESPONSE);
}

service AuthenticationServer {
	rpc Logon (.bnet.protocol.authentication.LogonRequest) returns (.bnet.protocol.NoData);
	rpc ModuleNotify (.bnet.protocol.authentication.ModuleNotification) returns (.bnet.protocol.NoData);
	rpc ModuleMessage (.bnet.protocol.authentication.ModuleMessageRequest) returns (.bnet.protocol.NoData);
	rpc SelectGameAccount_DEPRECATED (.bnet.protocol.EntityId) returns (.bnet.protocol.NoData);
	rpc GenerateSSOToken (.bnet.protocol.authentication.GenerateSSOTokenRequest) returns (.bnet.protocol.authentication.GenerateSSOTokenResponse);
	rpc SelectGameAccount (.bnet.protocol.authentication.SelectGameAccountRequest) returns (.bnet.protocol.NoData);
	rpc VerifyWebCredentials (.bnet.protocol.authentication.VerifyWebCredentialsRequest) returns (.bnet.protocol.NoData);
}
